# Resource_Manager

./: README.md  Resource_Management.filters  Resource_Management.vcproj  Resource_Management.vcxproj  configure.ac
m4/: ax_check_link_flag.m4
src/: Config.cpp  Config.h  Makefile.am  MyExceptionHandler.cpp  MyExceptionHandler.h  ProcessHandler.cpp  ProcessHandler.h  Resource_Management.cpp  Resource_Management.h  stdafx.h  targetver.h
