bin_PROGRAMS = Resource_Management

Resource_Management_SOURCES = Resource_Management.cpp Resource_Management.h
Resource_Management_SOURCES += Config.cpp Config.h
Resource_Management_SOURCES += MyExceptionHandler.cpp MyExceptionHandler.h
Resource_Management_SOURCES += ProcessHandler.cpp ProcessHandler.h
Resource_Management_SOURCES += stdafx.h targetver.h
